# python3-template

./: .flake8  .gitignore  Pipfile  README.md  bootstrap.py  cli.py  pyproject.toml.template  setup.cfg  setup.cfg.template  setup.py  yourproject.py
.github/workflows/: python-linux.yml  python-macos.yml  python-windows.yml  python.yml  pythonapp.yml
src/yourproject/: __init__.py  cli.py
submodule/: main.py
tests/: __init__.py  dummy_test.py  testables.py  yourproject_test.py
yourproject/: __init__.py
