[metadata]
name = yourproject
version = 0.0.0
description = This is Your Project
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    # TODO: List dependencies here as if it were requirements.txt

[options.entry_points]
console_scripts =
    # TODO: rename 'yourapp' to your preference
    yourapp = cli:main

[options.packages.find]
exclude =
    tests
    tests/*

[pycodestyle]
exclude = .venv
